# homeserver

./: .env.secret  .gitencrypt  .gitignore  Makefile
ansible/: .gitignore  backup-remote.yml  backup.yml  server.yml
certbot/: certbot-certificates  certbot-certonly  domain_list.secret  ovh-credentials.secret
host/: .gitignore  Makefile  backup.sh  backup.yml  remote-backup.sh  requirements.txt  server.yml
host_system/: .backup-drive-luks-passphrase.secret  crontab_entries  environment_config  media-data.mount  media-data2.automount  media-data2.mount  remote_backup.automount  remote_backup.mount  unlock-luks-backup.service
k8s/: .gitignore  README.md  bootstrap.sh  build-local-images.sh  configure-vault-k8s-auth.py  helmfile.yaml  kubectl-data-transfer  sync-cluster.sh
k8s/atuin/: atuin-values.yaml
k8s/audiobookshelf/: audiobookshelf-values.yaml
k8s/caddy/: Chart.yaml  Dockerfile  values.yaml
k8s/dns/: tailscale.yaml
k8s/homeassistant/: homeassistant-values.yaml
k8s/hugo-blog/: Dockerfile  hugo-blog-values.yaml
k8s/image-refresh/: Dockerfile  daily-rollout-restart.yaml  refresh-images.sh
k8s/immich/: immich-values.yaml
k8s/jellyfin/: jellyfin-values.yaml
k8s/monitoring/: Chart.yaml  values.yaml
k8s/navidrome/: navidrome-values.yaml
k8s/nextcloud/: Chart.yaml  values.yaml
k8s/persistentVolume/: audiobook-library.yaml  local-path-retain-storageclass.yaml  media.yaml  music-library.yaml  (+1 more)
nix/: .gitignore  AGENTS.md  README.md  flake.nix  nix-build.sh  nix-rollback.sh  security-fixes.md
nix/hosts/home-stockholm/backup/svc/: README.md  default.nix  pyproject.toml
nix/hosts/home-stockholm/backup/svc/svc/: config.py  exceptions.py  svc.py
nix/hosts/home-stockholm/backup/svc/svc/cli/: args.py  parser.py
nix/hosts/home-stockholm/backup/svc/svc/cli/commands/: __init__.py  backup_cmd.py  base.py  docker_cmd.py  list_cmd.py  restore_cmd.py  service_cmd.py
nix/hosts/home-stockholm/backup/svc/svc/controllers/: __init__.py  disk_health.py  kubernetes.py  logs.py  restic.py  systemctl.py
nix/hosts/home-stockholm/backup/svc/svc/core/: __init__.py  backup_orchestrator.py  k3s_restore.py  path_resolver.py  restore_orchestrator.py  service_helpers.py
nix/hosts/homeserver/backup/svc/: CLAUDE.md  README.md  pyproject.toml
nix/hosts/homeserver/backup/svc/svc/: __init__.py  config.py  exceptions.py  svc.py
nix/hosts/homeserver/backup/svc/svc/cli/: __init__.py  args.py  parser.py  renderer.py
nix/hosts/homeserver/backup/svc/svc/cli/commands/: __init__.py  backup_cmd.py  base.py  docker_cmd.py  doctor_cmd.py  list_cmd.py  restore_cmd.py  service_cmd.py
nix/hosts/homeserver/backup/svc/svc/controllers/: __init__.py  docker.py  restic.py  systemctl.py
nix/hosts/homeserver/backup/svc/svc/core/: __init__.py  backup_orchestrator.py  path_resolver.py  restore_orchestrator.py  service_helpers.py  service_manager.py
(+532 files in other folders)
