[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svc"
dynamic = ["version"]
description = "Homeserver service backup/restore and lifecycle CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pydantic>=2",
  "rich>=13",
]

[dependency-groups]
dev = [
  "pyright>=1.1.390",
]

[project.scripts]
svc = "svc.svc:main"

[tool.setuptools.dynamic]
version = {attr = "svc.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["svc*"]

[tool.setuptools.package-data]
svc = ["py.typed"]

[tool.pyright]
include = ["svc"]
strict = ["svc"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# select = ["E", "F", "I", "UP"]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    # "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "G004", # logging statement with f-string
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "D417",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "FBT",    # booleans as positional args (too noisy here)
    "TRY003", # external messages in exceptions are too verbose
    "TRY400", # prefer exception() over error() (not desired for expected failures)
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "T201",   # allow print() in PlainRenderer
    "ERA001", # allow explanatory comments
]
